# lucre

./: .env.example  .gitignore  .pre-commit-config.yaml  DESIGN.md  Dockerfile  README.md  TASKS.md  claude.md  docker-entrypoint.sh  litestream.yml  models.py
backend/: auth.py  config.py  crypto.py  database.py  logging_setup.py  main.py  models.py  plaid_client.py  pyproject.toml  scheduler.py  templating.py
backend/routes/: auth_routes.py  bills.py  networth.py  pages.py  plaid_link.py  settings.py  spending.py  subscriptions.py  transactions.py
backend/scripts/: hash_password.py
backend/services/: alert_rules.py  alerts.py  bills.py  digest.py  email.py  merchants.py  networth.py  recurring.py  rules.py  settings_store.py  snapshots.py  spending.py  subscriptions.py  sync.py  transactions.py
backend/static/: manifest.json  styles.css  sw.js
backend/templates/: _accounts.html  _category_cell.html  _networth_chart.html  _subscriptions_list.html  _transaction_rows.html  base.html  bill_form.html  bills.html  dashboard.html  link.html  login.html  settings.html  spending.html  subscriptions.html  transactions.html
backend/tests/: conftest.py  test_alert_events.py  test_alert_rules.py  test_alert_settings.py  test_auth.py  test_backfill.py  test_balance_snapshot.py  test_bills_due_dates.py  test_bills_model.py  test_bills_page.py  test_bills_seed.py  test_config.py  test_dashboard.py  test_database.py  test_digest.py  test_effective_category.py  test_email.py  test_full_sync.py  test_link.py  test_logging_setup.py  test_merchant_rules.py  test_merchants.py  test_networth.py  test_networth_chart.py  test_pages.py  test_plaid_client.py  test_recategorize.py  (+9 more)
(+3 files in other folders)
